(fix) remove ancestor styles when traversing DOM

--- a/example/css/print.css
+++ b/example/css/print.css
@@ -2,4 +2,12 @@
     .pe-no-print {
         display: none !important;
     }
+
+    .pe-preserve-ancestor {
+        display: block !important;
+        margin: 0 !important;
+        padding: 0 !important;
+        border: none !important;
+        box-shadow: none !important;
+    }
 }
