--- a/example/css/site.css
+++ b/example/css/site.css
@@ -37,7 +37,9 @@ nav ul li {
 
 main {
     margin: 20px;
+    padding: 15px;
     display: flex;
+    box-shadow: #a0a0a0 5px 5px 5px;
 }
 
 .article-header {
@@ -88,7 +90,13 @@ aside > p {
 }
 
 div.actions {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(255,255,255,0.5);
+
     display: flex;
     justify-content: space-around;
-    margin: 15px 25px;
+    padding: 15px 25px;
 }
