--- a/example/css/site.css
+++ b/example/css/site.css
@@ -92,8 +92,8 @@ aside > p {
 div.actions {
     position: fixed;
     top: 0;
-    left: 0;
-    right: 0;
+    width: 100%;
+    max-width:inherit;
     background-color: rgba(255,255,255,0.5);
 
     display: flex;
